--- a/src/main/resources/templates/recipeList.html
+++ b/src/main/resources/templates/recipeList.html
@@ -24,11 +24,15 @@
         <th>ID</th>
         <th>Description</th>
         <th>View</th>
+        <th>Update</th>
+        <th>Delete</th>
     </tr>
     <tr th:each="recipe : ${recipes}">
         <td th:text="${recipe.id}">123</td>
         <td th:text="${recipe.description}">Tasty Goodnees</td>
-        <td><a href="#" th:href="@{'/recipe/show/' + ${recipe.id}}">View</a></td>
+        <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/show' }">View</a></td>
+        <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/update' }">Update</a></td>
+        <td><a href="#" th:href="@{'/recipe/' + ${recipe.id} + '/delete' }">Delete</a></td>
     </tr>
 </table>
 
